added period to logout

--- a/app/views/users/logout.html.erb
+++ b/app/views/users/logout.html.erb
@@ -1,4 +1,4 @@
-<p>You are now logged out</p>
+<p>You are now logged out.</p>
 <p>To access the application again you will need to use the entry link you received by email. Alternatively you can request a new entry link from the login page.</p>
 
 <%= link_to 'To login page', messages_path %>
